--- a/styles/components/_search-result.scss
+++ b/styles/components/_search-result.scss
@@ -1,58 +1,81 @@
 
 .searchResultContainer{
-    position: relative;
-    background:white;
-    border-radius: 10px;
-    color:black;
+    //display
     display: flex;
-    margin: 1%;
-    height:100%;
-    width: 100%;
-      
+    padding: $base-padding * 1.2;
 
+    //position
+    margin: auto;
+    margin-top: $edge-margin;
+    margin-bottom: $base-margin;
+
+    //style
+    background:white;
+    border-radius: $base-border-radius;
+    color:black;
+
+    @include sm {
+        background-color: red;
+        height: 38%;
+        width: 85%;
+    }
+    @include md {
+        background-color: orange;
+        height: 35%;
+        width: 85%;
+    }
+    @include lg {
+        background-color: yellow;
+        width: 80%;
+    }
+    @include xl {
+        background-color: green;
+        width: 75%;
+    }
     .img{
-        width: 30%;
-        margin: 25px;
-        border-radius: 20px;
+        width: 35%;
+        border-radius: $base-border-radius;
         object-fit: cover;
     }
 
-    .name{
-        width: 100%;
-        margin-top: 1%;
-        font-size: 2rem;
-        font-weight: bold;
-        position: relative;
-    }
-
-    .container{
-        display: flex;
-        width:100%;
-        margin-top: 30%;
-    }
-
-    .room,
-    .location{
-        font-size: 1rem;
-        position: relative;
-        margin-top: 1%;
-    }
-
-    .money,
-    .time{
-        font-size: 1.2rem;
-        margin-right: 5%;
-    }
     .content{
-        padding:2%;
-    }
 
-    .situation{
-        font-size: 36px;
-        font-weight: bold;
-        margin-left: 2%;
-        position: relative;
-        bottom: 10px;
+        padding: $base-padding * 0.8;
+        padding-left: $base-padding * 2;
+        padding-bottom: 0;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        h1{
+            font-size: $font-size-lg;
+            font-weight: bold;
+        }
+
+        * {
+            font-size: $base-font-size;
+            margin-bottom: $base-margin;
+        }
+
+        .container{
+            display: flex;
+            justify-content: space-between;
+            justify-self: end;
+            width:100%;
+
+            padding-right: $base-padding;
+            margin-top: auto;
+
+            @include sm {
+                // margin-top: $base-margin;
+                flex-direction: column;
+            }
+            @include md {
+                flex-direction: row;
+                align-items: flex-end;
+            }
+        }
     }
-    
 }
