--- a/styles/components/_search-searchform.scss
+++ b/styles/components/_search-searchform.scss
@@ -1,46 +1,31 @@
 .searchSearchformContainer {
-    padding: 10px;
-    display:flex;
+
+    display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    width:80%;
-
-    .first,
-    .second,
-    .third,
-    .fourth {
-        padding:10px;
+    margin-top: $base-margin * 2;
+    
+    * {
+        height: 2.4rem;
+        padding: 10px;
         display: flex;
-        margin: 10px;
+        margin-top: $base-margin * 0.75;
+        margin-bottom: $base-margin * 0.75;
         align-items: center;
         justify-content: center;
         background-color: #fff;
         border-radius: 5px;
-        font-weight:bolder; 
+        font-weight:bolder;
+        font-size: $base-font-size; 
     }
-    .btn{
-        padding:10px;
-        display: flex;
-        margin: 10px;
-        align-items: center;
-        justify-content: center;
-        background-color: #fff;
-        border-radius: 5px;
-        font-weight:bolder; 
-        position: relative;
-
-        background-color: #fff;
-        border-radius: 5px;
+    .btn {
         cursor: pointer;
 
         &:active {
             background-color: #d9d9d9;
             box-shadow: 0 2px #666;
             transform: translateY(2px);
-        }
-        span{
-            font-size: 0.8rem;
         }
     }
     
