--- a/styles/components/_search-section.scss
+++ b/styles/components/_search-section.scss
@@ -1,57 +1,83 @@
-.searchBottomContainer{
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    .btnfilter{
-        height: 5%;
-        width:50%;
-        margin-top: 50%;
-        border-radius: 10px;
-        cursor: pointer;
-    
-    }
-    .block{
-        position: relative;
-        height:40%;
-        width:100%; 
-    }
-    .bottomleftcontainer{
-        height:100%;
-        width: 20%;
-        position: fixed;
-        background-color: gray;
-        top:20%;
-        display: flex;
-        flex-direction:column;
-        align-items: center;
-    }
-    .hoteldata {
-        margin-top: 2%;
-        position: absolute;
-        padding:2%;
-        height:100%;
-        width:80%;
-        right:0%;
-        top:20%;
-        z-index: -1;
-    }
-}
-
 .searchTopContainer{
     background-color: dimgrey;
     display:flex;
     justify-content: space-between;
-    padding: 2%;
     position: fixed;
     width: 100%;
     align-items: center;
-    height: 20%;
+    height: 15%;
+    padding: 3%;
+    
+
     .text{
         position: relative;
-        margin-left: 5%;
         color: white;
         font-weight: bold;
-        font-size: 64px;
+
+        @include sm {
+            font-size: $font-size-xxl;
+        }
+        @include lg {
+            font-size: $base-font-size * 3.5;
+        }
+    }
+}
+
+.searchBottomContainer{
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    
+    .bottomleftcontainer{
+        height:100%;
+        position: fixed;
+        background-color: gray;
+        top: 15%;
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+        @include sm {
+            width: 25%;
+        }
+        @include md{
+            width: 20%;
+        }
+        @include lg {
+            width: 18%;
+        }
+
+        .searchSearchformContainer, .btnfilter  {
+            @include sm {
+                width: 80%;
+            }
+            @include lg {
+                width: 70%;
+            }
+            @include xl {
+                width: 65%;
+            }
+        }
+        .btnfilter{
+            border-radius: 5px;
+            cursor: pointer;
+            
+            height: 2.4rem;
+            padding: 10px;
+            margin: $base-margin * 0.75;
+            margin-top: 20%;
+            font-weight:bolder;
+            font-size: $base-font-size; 
+            
+        }
+    }
+    .hoteldata {
+        position: absolute;
+        height:100%;
+        width:80%;
+        top: 20%;
+        z-index: -1;
+        right: 0%;
+        
     }
 }
 
@@ -64,7 +90,6 @@
     background-color: #000;
     opacity: 0.4;
     z-index: 1;
-
 }
 .searchMaskHidden{
     visibility: hidden;
