--- a/styles/components/_search-section.scss
+++ b/styles/components/_search-section.scss
@@ -6,7 +6,9 @@
     width: 100%;
     align-items: center;
     height: 15%;
-    padding: 3%;
+    padding-right: 3%;
+    padding-left: 3%;
+    padding-top: $base-padding;
     
 
     .text{
@@ -15,6 +17,9 @@
         font-weight: bold;
 
         @include sm {
+            font-size: $font-size-xl;
+        }
+        @include md {
             font-size: $font-size-xxl;
         }
         @include lg {
@@ -40,9 +45,12 @@
             width: 25%;
         }
         @include md{
-            width: 20%;
+            width: 23%;
         }
         @include lg {
+            width: 23%;
+        }
+        @include xl {
             width: 18%;
         }
 
