--- a/styles/components/_home-section.scss
+++ b/styles/components/_home-section.scss
@@ -1,4 +1,4 @@
-.homesectioncontainer{
+.homeSectionContainer{
     /*background: var(--img) center center/cover no-repeat;*/
     height: 100vh;
     width: 100%;
