--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
-.introcontainer {
+.homeIntroContainer {
   position: absolute;
   display: flex;
   margin-right: 3%;
@@ -13,39 +13,39 @@
   text-align: right;
 }
 @media (min-width: 480px) {
-  .introcontainer {
+  .homeIntroContainer {
     visibility: hidden;
   }
 }
 @media (min-width: 720px) {
-  .introcontainer {
+  .homeIntroContainer {
     visibility: hidden;
   }
 }
 @media (min-width: 960px) {
-  .introcontainer {
+  .homeIntroContainer {
     visibility: visible;
   }
 }
-.introcontainer .title {
+.homeIntroContainer .title {
   color: #fff;
   margin-top: 1rem;
 }
-.introcontainer .line1 {
+.homeIntroContainer .line1 {
   width: 40%;
   position: relative;
 }
-.introcontainer .content {
+.homeIntroContainer .content {
   color: #fff;
   margin-top: 10px;
   font-size: 1.2rem;
 }
-.introcontainer .hidden {
+.homeIntroContainer .hidden {
   color: transparent;
   transition: 0.5s;
 }
 
-.loginbtcontainer {
+.homeLoginbtContainer {
   position: absolute;
   left: 5%;
   bottom: 5%;
@@ -56,11 +56,11 @@
   font-family: Microsoft JhengHei;
   font-weight: bold;
 }
-.loginbtcontainer p {
+.homeLoginbtContainer p {
   font-size: 1rem;
   color: white;
 }
-.loginbtcontainer .button {
+.homeLoginbtContainer .button {
   color: white;
   font-family: Microsoft JhengHei;
   font-weight: bold;
@@ -68,12 +68,12 @@
   background-color: transparent;
   cursor: pointer;
 }
-.loginbtcontainer .button:hover {
+.homeLoginbtContainer .button:hover {
   transform: scale(1.1);
   transition: all 1s;
 }
 
-.searchcontainer {
+.homeSearchContainer {
   height: 60px;
   position: relative;
   background-color: aliceblue;
@@ -87,29 +87,29 @@
   align-items: center;
 }
 @media (min-width: 480px) {
-  .searchcontainer {
+  .homeSearchContainer {
     width: 530px;
   }
 }
 @media (min-width: 720px) {
-  .searchcontainer {
+  .homeSearchContainer {
     width: 620px;
   }
 }
 @media (min-width: 960px) {
-  .searchcontainer {
+  .homeSearchContainer {
     width: 850px;
   }
 }
 @media (min-width: 1200px) {
-  .searchcontainer {
+  .homeSearchContainer {
     width: 850px;
   }
 }
-.searchcontainer p {
+.homeSearchContainer p {
   transform: translateY(-5%);
 }
-.searchcontainer .button {
+.homeSearchContainer .button {
   height: 50px;
   background-color: transparent;
   color: black;
@@ -119,18 +119,18 @@
   font-weight: bold;
   transform: translateY(-5%);
 }
-.searchcontainer .selectform {
+.homeSearchContainer .selectform {
   background: transparent;
   font-size: 1rem;
   font-weight: bold;
   outline: none;
   transform: translateY(-5%);
 }
-.searchcontainer .option {
+.homeSearchContainer .option {
   font-weight: bold;
   background: transparent;
 }
-.searchcontainer .time {
+.homeSearchContainer .time {
   border: 0;
   background-color: aliceblue;
   font-size: 1rem;
@@ -139,7 +139,7 @@
   cursor: pointer;
 }
 
-.homesectioncontainer {
+.homeSectionContainer {
   /*background: var(--img) center center/cover no-repeat;*/
   height: 100vh;
   width: 100%;
@@ -150,7 +150,7 @@
   -o-object-fit: contain;
      object-fit: contain;
 }
-.homesectioncontainer .webname {
+.homeSectionContainer .webname {
   color: #fff;
   left: 5%;
   margin-bottom: 3%;
@@ -158,18 +158,18 @@
   position: relative;
 }
 @media (min-width: 480px) {
-  .homesectioncontainer .webname {
+  .homeSectionContainer .webname {
     font-size: 5rem;
     width: 380px;
   }
 }
 @media (min-width: 720px) {
-  .homesectioncontainer .webname {
+  .homeSectionContainer .webname {
     font-size: 6rem;
     width: 500px;
   }
 }
-.homesectioncontainer .background {
+.homeSectionContainer .background {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
@@ -178,7 +178,7 @@
   position: fixed;
   z-index: -2;
 }
-.homesectioncontainer .scrollbutton {
+.homeSectionContainer .scrollbutton {
   display: inline-block;
   padding: 0;
   right: 5%;
@@ -190,25 +190,25 @@
   cursor: pointer;
 }
 @media (min-width: 480px) {
-  .homesectioncontainer .scrollbutton {
+  .homeSectionContainer .scrollbutton {
     visibility: hidden;
   }
 }
 @media (min-width: 720px) {
-  .homesectioncontainer .scrollbutton {
+  .homeSectionContainer .scrollbutton {
     visibility: hidden;
   }
 }
 @media (min-width: 960px) {
-  .homesectioncontainer .scrollbutton {
+  .homeSectionContainer .scrollbutton {
     visibility: visible;
   }
 }
-.homesectioncontainer .scrollindicator {
+.homeSectionContainer .scrollindicator {
   position: absolute;
   bottom: 0;
 }
-.homesectioncontainer .scrollindicatorlabel {
+.homeSectionContainer .scrollindicatorlabel {
   display: block;
   margin-bottom: 2rem;
   font-size: 1rem;
@@ -216,7 +216,7 @@
   color: #fff;
   text-transform: uppercase;
 }
-.homesectioncontainer .scrollindicatorline {
+.homeSectionContainer .scrollindicatorline {
   width: 2px;
   height: 5vh;
   background-color: #fff;
@@ -224,7 +224,7 @@
   position: relative;
   left: 49%;
 }
-.homesectioncontainer .mask {
+.homeSectionContainer .mask {
   height: 100%;
   width: 35%;
   left: 3%;
@@ -233,7 +233,7 @@
   opacity: 0.4;
   position: fixed;
 }
-.homesectioncontainer .mask1 {
+.homeSectionContainer .mask1 {
   height: 100%;
   background-color: #000;
   opacity: 0.4;
@@ -241,11 +241,11 @@
   width: 100%;
   position: fixed;
 }
-.homesectioncontainer .daypicker {
+.homeSectionContainer .daypicker {
   visibility: hidden;
   position: absolute;
 }
-.homesectioncontainer .daypicker1 {
+.homeSectionContainer .daypicker1 {
   background-color: #fff;
   border-radius: 20px;
   padding: 40px;
@@ -256,13 +256,13 @@
   transform: translate(-50%, -50%);
 }
 
-.loginformcontainer {
+.loginFormContainer {
+  position: relative;
+  top: 7%;
   background: #cccccc;
   height: 720px;
   width: 420px;
-  position: relative;
   margin: auto;
-  margin-top: 3rem;
   border-radius: 50px;
   display: flex;
   flex-direction: column;
@@ -271,62 +271,62 @@
   padding-top: 2.5rem;
   padding-bottom: 5rem;
 }
-.loginformcontainer .logo {
+.loginFormContainer .logo {
   height: 80px;
   width: 80px;
 }
-.loginformcontainer .title {
+.loginFormContainer .title {
   font-family: "Courgette", cursive;
   font-size: 3rem;
   text-align: center;
   margin-top: -1rem;
 }
-.loginformcontainer .button {
+.loginFormContainer .button {
   width: 68%;
   margin-top: 1rem;
 }
-.loginformcontainer .block {
+.loginFormContainer .block {
   background: #ffffff;
   width: 100%;
   height: 2.5rem;
   margin-bottom: 1.5rem;
   padding-left: 0.75rem;
 }
-.loginformcontainer .button, .loginformcontainer .block {
+.loginFormContainer .button, .loginFormContainer .block {
   border-radius: 15px;
   font-size: 1rem;
 }
-.loginformcontainer .form {
+.loginFormContainer .form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 69%;
 }
-.loginformcontainer .content {
+.loginFormContainer .content {
   width: 68%;
 }
-.loginformcontainer .checkbox {
+.loginFormContainer .checkbox {
   height: 1rem;
   width: 1rem;
 }
-.loginformcontainer .chcontent {
+.loginFormContainer .chcontent {
   font-size: 1rem;
   font-weight: 650;
 }
-.loginformcontainer .line {
+.loginFormContainer .line {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   width: 70%;
   border: 1px solid #333333;
 }
-.loginformcontainer .button2 {
+.loginFormContainer .button2 {
   width: 50px;
   height: 50px;
   border: none;
   background-color: none;
   margin-left: 50%;
 }
-.loginformcontainer .link .content {
+.loginFormContainer .link .content {
   color: #4CB6C5;
   width: 286px;
   margin-top: 0.75rem;
