--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -22,6 +22,7 @@
 @import '../components/search-result';
 @import '../components/search-searchform';
 @import '../components/search-section';
-
+@import '../components/userMulti-menu';
+@import '../components/userPersonalInfo-section';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
