--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -931,4 +931,61 @@
 .searchMaskHidden {
   visibility: hidden;
   z-index: -2;
+}
+
+.userMultiMenuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #D9D9D9;
+  height: 85%;
+  width: 13%;
+  font-family: Microsoft JhengHei;
+  font-size: 1.2rem;
+  padding: 0.75rem;
+  padding-top: 1.5rem;
+}
+.userMultiMenuContainer .title {
+  display: inline-flex;
+  align-items: center;
+}
+.userMultiMenuContainer .title i {
+  font-size: 35px;
+}
+.userMultiMenuContainer .title h1 {
+  font-size: 1.5rem;
+  margin: 1rem;
+}
+.userMultiMenuContainer .options {
+  display: flex;
+  flex-direction: column;
+}
+.userMultiMenuContainer .options .button {
+  display: inline-flex;
+  align-items: center;
+  margin: 1rem;
+}
+.userMultiMenuContainer .options i {
+  margin-right: 1rem;
+}
+.userMultiMenuContainer .options hr {
+  border: 0.5px #858585 solid;
+  width: 80%;
+  margin: 1rem;
+}
+
+.userPersonalInfoButtonContainer {
+  position: absolute;
+  top: 15%;
+  right: 0%;
+  width: 100%;
+}
+.userPersonalInfoButtonContainer .usersetting {
+  background-color: white;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 15%;
+  left: 30%;
+  margin: auto;
 }/*# sourceMappingURL=home.module.css.map */
