--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -23,7 +23,7 @@
         border-radius: 10px;
         display: flex;
         flex-direction: column;
-        height:250px;
+        height: 290px;
         width: 1000px;
     }
     
@@ -67,14 +67,14 @@
         font-weight: bold;
         color: red;
         margin-top: 6%;
-        margin-left: 35%;
+        margin-left: 37.5%;
     }
     
     .button{
         font-size: 100%;
-        width: 10%;
-        height: 125%;
-        margin-top: 1%;
+        width: 100px;
+        height: 40px;
+        margin-top: 1.5%;
         margin-left: 3%;
     }
     
@@ -82,23 +82,17 @@
         font-weight: bold;
         font-size: 100%;
         margin-top: 1%;
-        margin-left: 25.5%;
+        margin-left: 27.5%;
     }
     
     .button_container{
         position: relative;
         background:white;
         border-radius: 10px;
-        height:250px;
+        height:290px;
         width: 100px;
         margin-left: 12.5%;
         margin-top: 2.5%;
-    }
-    
-    
-    .heading{//房型(標題)
-        margin-left: 5%;
-        margin-top: 3%;
     }
 
     .right_container{//右邊那個立即訂房
