--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -536,7 +536,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  height: 250px;
+  height: 290px;
   width: 1000px;
 }
 .hotelInfoRoomContainer .container {
@@ -574,35 +574,41 @@
   font-weight: bold;
   color: red;
   margin-top: 6%;
-  margin-left: 35%;
+  margin-left: 37.5%;
 }
 .hotelInfoRoomContainer .button {
   font-size: 100%;
-  width: 10%;
-  height: 125%;
-  margin-top: 1%;
+  width: 100px;
+  height: 40px;
+  margin-top: 1.5%;
   margin-left: 3%;
 }
 .hotelInfoRoomContainer .discount {
   font-weight: bold;
   font-size: 100%;
   margin-top: 1%;
-  margin-left: 25.5%;
+  margin-left: 27.5%;
 }
 .hotelInfoRoomContainer .button_container {
   position: relative;
   background: white;
   border-radius: 10px;
-  height: 250px;
+  height: 290px;
   width: 100px;
   margin-left: 12.5%;
   margin-top: 2.5%;
 }
-.hotelInfoRoomContainer .heading {
-  margin-left: 5%;
-  margin-top: 3%;
-}
 .hotelInfoRoomContainer .right_container {
+  position: relative;
+  background: white;
+  border-radius: 10px;
+  height: 805px;
+  width: 100px;
+  left: 30px;
+  margin-top: 27.5px;
+}
+
+.hotelInfoBookContainer .right_container {
   position: relative;
   background: white;
   border-radius: 10px;
