--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -16,7 +16,10 @@
 @import '../components/userIndex-option';
 @import '../components/userIndex-setting';
 @import '../components/userIndex-section';
+
 @import '../components/hotelInfo-room';
+@import '../components/hotelInfo-book';
+
 @import '../components/search-filter';
 @import '../components/search-order';
 @import '../components/search-result';
