--- a/styles/components/_userPersonalInfo-section.scss
+++ b/styles/components/_userPersonalInfo-section.scss
@@ -3,16 +3,166 @@
     top: 15%;
     right: 0%;
     width: 100%;
-    .buttonleftcontainer{
-        
+    height: 85%;
+    display: flex;
+
+    .userinfoblock {
+        margin: auto;
+        background-color: white;
+        @include sm {
+            padding: $base-padding * 2;
+            width: 100%;
+            height: 100%;
+        }
+        @include lg {
+            padding: $base-padding * 4;
+            width: 70%;
+            height: 84%;
+            border-radius: $base-border-radius;
+            border: 1px solid $secondary-color;
+        }
+
+        h1 {
+            font-size: $font-size-lg;
+        }
+
     }
     .usersetting {
-        background-color: white;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 15%;
-        left: 30%;
         margin: auto;
+        margin-top: 2vh;
+        display: flex;
+
+        font-size: $font-size-md;
+        @include sm {
+            flex-direction: column;
+            * {
+                margin: 1.8vh;
+                margin-right: 1vh;
+                margin-left: 1vh;
+                font-size: $base-font-size;
+            }
+        }
+        @include md {
+            flex-direction: row;
+            * {
+                font-size: $base-font-size * 1.1;
+                margin-top: 2.5vh;
+                margin-bottom: 2.5vh;
+            }
+        }
+        @include lg {
+            * {
+                font-size: $font-size-md;
+                margin-top: 1.8vh;
+                margin-bottom: 1.8vh;
+            }
+        }
+        @include xl {
+            justify-content: space-around;
+            * {
+                margin: 1.8vh;
+            }
+        }
+        .userbutton, .submit {
+            background-color: white;
+            border: 1px solid $decorate-color;
+            border-radius: 5px;
+            height: 2.3rem;
+            font-size: $font-size-md;
+            &:hover {
+                background-color: $decorate-color;
+                color: white;
+            }
+            @include sm {
+                font-size: $base-font-size;
+                width: 90px;
+            }
+            @include lg {
+                font-size: $font-size-md;
+                width: 100px;
+            }
+        }
+    }
+
+    .usertitle {
+        display: flex;
+        align-items: center;
+        @include sm {
+            flex-direction: row;
+            justify-content: space-around;
+            .userbutton {
+                margin-top: auto;
+            }
+        }
+        @include md {
+            flex-direction: column;
+            justify-content: flex-start;
+            .userbutton {
+                margin-top: $base-margin;
+            }
+        }
+        .image {
+            background-color: $background-color;
+            border-radius: 50px;
+            @include sm {
+                height: 75px;
+                width: 75px;
+            }
+            @include md {
+                height: 100px;
+                width: 100px;
+            }
+        }
+        
+        h2 {
+            font-weight: 400;
+            @include sm {
+                font-size: $font-size-md;
+            }
+            @include lg {
+                font-size: $font-size-lg;
+            }
+        }
+    }
+    
+    .userinfo {
+        display: grid;
+        grid-template-columns: 1fr, 2fr, 1fr; 
+        
+        @include sm {
+            width: 100%;
+            margin-left: $base-margin;
+        }
+        @include md {
+            margin-left: 4%;
+        }
+        @include lg {
+            margin-left: 6%;
+        }
+        @include xl {
+            width: 65%;
+            margin-left: 8%;
+        }
+        
+        input {
+            border: 1px solid $decorate-color;
+            border-radius: 3px;
+            height: 2rem;
+            padding-left: $base-padding;
+            padding-right: $base-padding;
+            grid-column-start: 2;
+            grid-column-end: 4;
+        }
+        
+        p {
+            grid-column-start: 1;
+            grid-column-end: 2;
+        }
+        .submit {
+            margin-top: 3vh;
+            margin-left: auto;
+            grid-column-start: 3;
+            grid-column-end: 4;
+        }  
     }
 }
