add : add js in Section

--- a/styles/components/_login-loginform.scss
+++ b/styles/components/_login-loginform.scss
@@ -1,10 +1,10 @@
 .loginFormContainer {
 
     position: relative;
-    top: 7%;
-    background: #cccccc;
     
-    height: 720px;
+    background: #cccccc;
+    top:4%;
+    height: 93%;
     width: 420px;
     margin: auto;
     border-radius: 50px;
