--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -258,9 +258,9 @@
 
 .loginFormContainer {
   position: relative;
-  top: 7%;
   background: #cccccc;
-  height: 720px;
+  top: 4%;
+  height: 93%;
   width: 420px;
   margin: auto;
   border-radius: 50px;
