--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -17,6 +17,10 @@
 @import '../components/userIndex-setting';
 @import '../components/userIndex-section';
 @import '../components/hotelInfo-room';
+@import '../components/hotelInfo-attraction';
+@import '../components/hotelInfo-evaluate';
+@import '../components/hotelInfo-information';
+@import '../components/hotelInfo-transportation';
 @import '../components/search-filter';
 @import '../components/search-order';
 @import '../components/search-result';
