--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -228,7 +228,7 @@
   height: 100%;
   width: 35%;
   left: 3%;
-  z-index: -1;
+  z-index: -2;
   background-color: #000;
   opacity: 0.4;
   position: fixed;
@@ -1018,11 +1018,6 @@
 }
 @media (min-width: 480px) {
   .searchTopContainer .text {
-    font-size: 2rem;
-  }
-}
-@media (min-width: 720px) {
-  .searchTopContainer .text {
     font-size: 3rem;
   }
 }
@@ -1130,22 +1125,26 @@
 }
 @media (min-width: 480px) {
   .userMultiMenuContainer {
-    width: 30%;
+    width: 150px;
   }
 }
-@media (min-width: 960px) {
+@media (min-width: 720px) {
   .userMultiMenuContainer {
-    width: 18%;
-  }
-}
-@media (min-width: 1200px) {
-  .userMultiMenuContainer {
-    width: 15%;
+    width: 240px;
   }
 }
 .userMultiMenuContainer .title {
-  display: inline-flex;
   align-items: center;
+}
+@media (min-width: 480px) {
+  .userMultiMenuContainer .title {
+    display: none;
+  }
+}
+@media (min-width: 720px) {
+  .userMultiMenuContainer .title {
+    display: inline-flex;
+  }
 }
 .userMultiMenuContainer .title i {
   font-size: 35px;
@@ -1154,21 +1153,31 @@
   font-size: 1.5rem;
   margin: 1rem;
 }
-.userMultiMenuContainer .small {
+.userMultiMenuContainer .smoptions {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  justify-content: space-around;
+  height: 90%;
+  margin: auto;
+  margin-bottom: 10%;
+  margin-top: 8%;
 }
-.userMultiMenuContainer .small p {
+.userMultiMenuContainer .smoptions p {
   display: none;
 }
-.userMultiMenuContainer .small .button {
-  font-size: 1.5rem;
-  margin: auto;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.userMultiMenuContainer .smoptions i {
+  margin-right: 1rem;
+  font-size: 45px;
 }
-.userMultiMenuContainer .small hr {
+.userMultiMenuContainer .smoptions .button {
+  width: 50px;
+  height: 50px;
+  margin: 1rem;
+}
+.userMultiMenuContainer .smoptions .button:hover {
+  color: black;
+}
+.userMultiMenuContainer .smoptions hr {
   border: 0.5px white solid;
   width: 60%;
   margin: 1rem;
@@ -1182,21 +1191,12 @@
   align-items: center;
   margin: 1rem;
 }
+.userMultiMenuContainer .options .button:hover {
+  color: black;
+}
 .userMultiMenuContainer .options i {
   margin-right: 1rem;
-}
-@media (min-width: 480px) {
-  .userMultiMenuContainer .options a {
-    width: 90px;
-  }
-}
-@media (min-width: 720px) {
-  .userMultiMenuContainer .options a {
-    width: 115px;
-  }
-}
-.userMultiMenuContainer .options a:hover {
-  color: black;
+  font-size: 30px;
 }
 .userMultiMenuContainer .options hr {
   border: 0.5px white solid;
@@ -1378,7 +1378,7 @@
     margin-left: 8%;
   }
 }
-.userPersonalInfoButtonContainer .userinfo input {
+.userPersonalInfoButtonContainer .userinfo input, .userPersonalInfoButtonContainer .userinfo button {
   border: 1px solid #858585;
   border-radius: 3px;
   height: 2rem;
@@ -1386,6 +1386,7 @@
   padding-right: 0.75rem;
   grid-column-start: 2;
   grid-column-end: 4;
+  background-color: white;
 }
 .userPersonalInfoButtonContainer .userinfo p {
   grid-column-start: 1;
@@ -1396,4 +1397,29 @@
   margin-left: auto;
   grid-column-start: 3;
   grid-column-end: 4;
+}
+.userPersonalInfoButtonContainer .mask {
+  visibility: hidden;
+}
+.userPersonalInfoButtonContainer .mask1 {
+  height: 100%;
+  background-color: #000;
+  opacity: 0.4;
+  z-index: 1;
+  width: 100%;
+  position: fixed;
+}
+.userPersonalInfoButtonContainer .daypicker {
+  visibility: hidden;
+  position: absolute;
+}
+.userPersonalInfoButtonContainer .daypicker1 {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  transform: translate(-50%, -50%);
 }/*# sourceMappingURL=home.module.css.map */
